$Id: ChangeLog 3716 2012-11-27 20:10:06Z chrfranke $

2012-11-27  Christian Franke  <franke@computer.org>

	smartd.cpp: Remove trailing newlines from some MailWarning() strings.
	os_win32/smartd_warning.cmd: Fix SMARTD_MESSAGE with parentheses.

2012-11-25  Alex Samorukov  <samm@os2.kiev.ua>

       OpenBSD: remove dummy functions

2012-11-24  Christian Franke  <franke@computer.org>

	Windows: Add tool wtssendmsg.exe based on no longer
	used module os_win32/wtssendmsg.cpp.
	os_win32/smartd_warning.cmd: Fix wtssendmsg call.
	os_win32/installer.nsi: Install smartd_warning.cmd
	and wtssendmsg.exe.  Fix uninstall of old ChangeLog.

2012-11-23  Christian Franke  <franke@computer.org>

	Move MSVC10 project files to new directory os_win32/vc10.

2012-11-22  Christian Franke  <franke@computer.org>

	smartd: Move warning message formatting and mailer/command
	startup to new script SYSCONFDIR/smartd_warning.sh
	(Windows: smartd_warning.cmd).
	Add environment variables SMARTD_PREVCNT and SMARTD_NEXTDAYS.
	Remove host/domainname related code from smartd.cpp
	and configure.in

2012-11-22  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: implemeted support for -g/-s rcache and -g/-s wcache for SCSI
	devices to control read/write device cache.

2012-11-19  Alex Samorukov  <samm@os2.kiev.ua>

	smartctl: supports progress indicator on selftests 
	smartctl: prints rotation speed for SCSI drives, if supported
	smartctl: add headers to SCSI output, fix data blocks formatting, 
	trim identification data
	os_linux.cpp: add autodetection for PERC H700 array
	smartd: trim SCSI vendor/model/serial before creating state files

2012-11-18  Alex Samorukov  <samm@os2.kiev.ua>

	smartd.cpp: implement error counters and temperature saving to the 
	attrlog file for SCSI devices.
	smartd.cpp: added reset_warning_mail() if device is working for SCSI

2012-11-18  Christian Franke  <franke@computer.org>

	drivedb.h: Western Digital Caviar Green: Add -F xerrorlba
